--- a/about.html
+++ b/about.html
@@ -623,7 +623,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="publication.html">Publication</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="articles.html">Articles</a></li>
