--- a/contact.html
+++ b/contact.html
@@ -488,7 +488,7 @@ nav ul.show {
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="projects.html">Projects</a></li>
-      <li><a href="blog.html">Blog</a></li>
+      <li><a href="publication.html">Publication</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html" class="active">Contact</a></li>
       <li><a href="articles.html">Articles</a></li>
