--- a/gallery.html
+++ b/gallery.html
@@ -369,7 +369,7 @@ nav ul.show {
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="projects.html">Projects</a></li>
-      <li><a href="blog.html">Blog</a></li>
+      <li><a href="publication.html">Publication</a></li>
       <li><a href="gallery.html" class="active">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="articles.html">Articles</a></li>
