--- a/gallery.html
+++ b/gallery.html
@@ -381,6 +381,61 @@ nav ul.show {
 <div class="container"><br><br>
     <h3 class="section-title">Moments and memories from Marwa Habibi’s journey</h3></div>
   <div class="cards-wrapper">
+
+    <!-- مثال ریکامندیشن لتر (پرتریت) -->
+    <div class="card-container portrait" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="Screenshot (791).png" alt="Recommendation Letter">
+        </div>
+        <div class="card-back">
+          <h4><strong style="color: #000000;">Abaad Book Project – Certificate of Recognition</strong></h4><br>
+          <p style="color: #000000;"><strong>Awarded for outstanding contribution to the Abaad Book Project. Recognized for using storytelling to preserve the experiences of Afghan women, amplify their voices, and inspire communities. Your participation highlights creativity, dedication, and advocacy for women’s rights.</strong></p><br>
+          <a href="https://drive.google.com/file/d/1QQRLb0RquKkFV2hHLalIXMkxPfO2pLPG/view?usp=sharing" target="_blank">
+    <button style="padding: 8px 16px; background-color: #000000; color: white; border: none; border-radius: 4px; cursor: pointer;">
+     <strong>Open PDF</strong>
+    </button>
+     </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- مثال ریکامندیشن لتر (پرتریت) -->
+    <div class="card-container portrait" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="Screenshot (788).png" alt="Recommendation Letter 1">
+        </div>
+        <div class="card-back">
+          <h4><strong style="color: #000000;">WEDO AI Business Education Course</strong></h4><br>
+          <p style="color: #000000;"><strong> Successfully completed the WEDO AI Business Education Course, mastering cutting-edge AI skills that empower innovation, leadership, and entrepreneurship. This program, taught by world-renowned AI experts and entrepreneurs, highlights commitment to AI-driven innovation and prepares participants to excel in the evolving digital landscape.</strong></p><br>
+        <a href="https://drive.google.com/file/d/1mOG2w70OFFXUS0yh1tovevv5Lysf-Ho8/view?usp=sharing" target="_blank">
+    <button style="padding: 8px 16px; background-color: #000000; color: white; border: none; border-radius: 4px; cursor: pointer;">
+     <strong>Open PDF</strong>
+    </button>
+     </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- مثال ریکامندیشن لتر (پرتریت) -->
+    <div class="card-container portrait" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="Screenshot (789).png" alt="Recommendation Letter 1">
+        </div>
+        <div class="card-back">
+          <h4><strong style="color: #000000;">EF SET English Certificate – C1 Advanced</strong></h4><br>
+          <p style="color: #000000;"><strong>Successfully completed the EF SET English Certificate with a total score of 62/100, achieving C1 Advanced level according to the CEFR. Demonstrated strong skills in Reading (C2), Listening (C1), Writing (B2), and Speaking (B2), reflecting high proficiency in English for academic and professional use.</strong></p><br>
+          <a href="https://drive.google.com/file/d/1H_4WGSXkhBRB8rj2tx2K__40mjjqZ-lN/view?usp=sharing" target="_blank">
+    <button style="padding: 8px 16px; background-color: #000000; color: white; border: none; border-radius: 4px; cursor: pointer;">
+     <strong>Open PDF</strong>
+    </button>
+     </a>
+        </div>
+      </div>
+    </div>
+
     <!-- مثال ریکامندیشن لتر (پرتریت) -->
     <div class="card-container portrait" onclick="this.classList.toggle('flipped')">
       <div class="card-inner">
@@ -455,59 +510,6 @@ nav ul.show {
       </div>
     </div>
 
-    <!-- مثال ریکامندیشن لتر (پرتریت) -->
-    <div class="card-container portrait" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Marwa.jpg" alt="Recommendation Letter 1">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Recommendation Letter</strong></h4><br>
-          <p style="color: #000000;"><strong>Endorsed by English instructor Nargis Ebrahimi, Marwa exemplifies unwavering dedication, exceptional language skills, and outstanding leadership potential. With a global outlook and a passion for driving positive, sustainable change, Marwa is a valuable asset to any forward-thinking organization.</strong></p><br>
-          <a href="https://drive.google.com/file/d/15cnhYhLx_milKW23dCHWllHM1jdgcnsh/view?usp=sharing" target="_blank">
-    <button style="padding: 8px 16px; background-color: #000000; color: white; border: none; border-radius: 4px; cursor: pointer;">
-     <strong>Open PDF</strong>
-    </button>
-     </a>
-        </div>
-      </div>
-    </div>
-
-    <!-- مثال ریکامندیشن لتر (پرتریت) -->
-    <div class="card-container portrait" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (558).png" alt="Recommendation Letter 1">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Recommendation Letter</strong></h4><br>
-          <p style="color: #000000;"><strong>This recommendation from Aryana Mahmood praises Marwa Habibi’s rare blend of technical skill and creativity, highlighting her dedication and readiness to make a strong impact in any academic or cultural setting.</strong></p><br>
-        <a href="https://drive.google.com/file/d/1swKeyRw7sqDUyo2TgluiEYUUWL1yxPC3/view?usp=sharing" target="_blank">
-    <button style="padding: 8px 16px; background-color: #000000; color: white; border: none; border-radius: 4px; cursor: pointer;">
-     <strong>Open PDF</strong>
-    </button>
-     </a>
-        </div>
-      </div>
-    </div>
-
-    <!-- مثال ریکامندیشن لتر (پرتریت) -->
-    <div class="card-container portrait" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (736).png" alt="Recommendation Letter">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Recommendation Letter</strong></h4><br>
-          <p style="color: #000000;"><strong>Recommendation letter from Tamim Popal, founder of Book Organization, praising my skills in English communication, writing, and leadership during seven months of study and collaboration.</strong></p><br>
-          <a href="https://drive.google.com/file/d/1RxK9QTAmVaCyLyIchT9oPXwfZWVcqoNr/view?usp=sharing" target="_blank">
-    <button style="padding: 8px 16px; background-color: #000000; color: white; border: none; border-radius: 4px; cursor: pointer;">
-     <strong>Open PDF</strong>
-    </button>
-     </a>
-        </div>
-      </div>
-    </div>
 
     <!-- مثال ریکامندیشن لتر (پرتریت) -->
     <div class="card-container portrait" onclick="this.classList.toggle('flipped')">
@@ -583,6 +585,30 @@ nav ul.show {
         <div class="card-back">
           <h4><strong style="color: #000000;">Certificate</strong></h4>
           <p style="color: #000000;">Completed the “Sustainable Lifestyles” course by UNSSC and UNEP, gaining insights into sustainable living practices and SDG-related behavioral change.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="Screenshot (792).png" alt="Certificate">
+        </div>
+        <div class="card-back">
+          <h4><strong style="color: #000000;">Amplify Afghan Women Video Journalism Competition</strong></h4>
+          <p style="color: #000000;">Awarded for remarkable contribution and exceptional creativity in the 2025 Amplify Afghan Women Video Journalism Competition.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="Screenshot (787).png" alt="Certificate">
+        </div>
+        <div class="card-back">
+          <h4><strong style="color: #000000;">IRIS Fall Scholars' Program</strong></h4>
+          <p style="color: #000000;"> Successfully participated in the IRIS Fall Scholars' Program, demonstrating dedication to Economics, Political Science, Entrepreneurship, Self-Development, International Relations, and Global Affairs.</p>
         </div>
       </div>
     </div>
@@ -855,18 +881,6 @@ nav ul.show {
     <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
       <div class="card-inner">
         <div class="card-front">
-          <img src="Screenshot (621).png" alt="Certificate 1">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Certificate of Completion – HTML Beginner Level</strong></h4>
-          <p style="color: #000000;">Awarded to Marwa Habibi for successfully completing the HTML Beginner course with Empower Afghan Girls Together (EAGT), showcasing foundational programming skills from March 16 to May 23, 2025.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
           <img src="Screenshot (13).png" alt="Certificate">
         </div>
         <div class="card-back">
@@ -899,56 +913,7 @@ nav ul.show {
     </div>
 
 
-    <!-- مثال سرتیفیکت (لندسکیپ) -->
     <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (161).png" alt="Certificate">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">IELTS Listening and Speaking Sections Skills Mastery</strong></h4><br>
-    <a href="https://coursera.org/verify/LDJIRB99B7EC" target="_blank" style="text-decoration:none;">
-      <button style="padding:8px 15px; cursor:pointer; background-color:#B2CD9C; color:white; border:none; border-radius:5px;">
-      Verify Certificate
-            </button>
-           </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (163).png" alt="Certificate">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Media Relations and Crisis Management</strong></h4><br>
-    <a href="https://coursera.org/verify/AEX6BGWFMBQO" target="_blank" style="text-decoration:none;">
-      <button style="padding:8px 15px; cursor:pointer; background-color:#B2CD9C; color:white; border:none; border-radius:5px;">
-      Verify Certificate
-            </button>
-           </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (633).png" alt="Certificate">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Leadership Skills</strong></h4><br>
-    <a href="https://coursera.org/verify/A4MOMIOR3M3E" target="_blank" style="text-decoration:none;">
-      <button style="padding:8px 15px; cursor:pointer; background-color:#B2CD9C; color:white; border:none; border-radius:5px;">
-      Verify Certificate
-            </button>
-           </a>
-        </div>
-      </div>
-    </div>
-
-      <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
       <div class="card-inner">
         <div class="card-front">
           <img src="Screenshot (164).png" alt="Certificate">
@@ -963,100 +928,7 @@ nav ul.show {
         </div>
       </div>
     </div>
-
-    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (632).png" alt="Certificate">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Emotional Intelligence in Leadership</strong></h4><br>
-  <a href="https://coursera.org/verify/C3WYDF4VHDHW" target="_blank" style="text-decoration:none;">
-    <button style="padding:8px 15px; cursor:pointer; background-color:#B2CD9C; color:white; border:none; border-radius:5px;">
-      Verify Certificate
-           </button>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (630).png" alt="Certificate 1">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Science Communication</strong></h4><br>
-  <a href="https://coursera.org/verify/Y30GFJWILR5U" target="_blank" style="text-decoration:none;">
-    <button style="padding:8px 15px; cursor:pointer; background-color:#B2CD9C; color:white; border:none; border-radius:5px;">
-      Verify Certificate
-           </button>
-          </a>
-        </div>
-      </div>
-    </div>
-
-      <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (162).png" alt="Certificate 1">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">English for Career Development</strong></h4><br>
-  <a href="https://coursera.org/verify/H50C9ELRVDO8" target="_blank" style="text-decoration:none;">
-    <button style="padding:8px 15px; cursor:pointer; background-color:#B2CD9C; color:white; border:none; border-radius:5px;">
-      Verify Certificate
-           </button>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (629).png" alt="Certificate 1">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Teach English Now! Technology Enriched Teaching</strong></h4><br>
-  <a href="https://coursera.org/verify/PSZQTV4D4IBT" target="_blank" style="text-decoration:none;">
-    <button style="padding:8px 15px; cursor:pointer; background-color:#B2CD9C; color:white; border:none; border-radius:5px;">
-      Verify Certificate
-           </button>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (165).png" alt="Certificate 1">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Business English Networking</strong></h4><br>
-  <a href="https://coursera.org/verify/2Q44M2GZL1G9" target="_blank" style="text-decoration:none;">
-    <button style="padding:8px 15px; cursor:pointer; background-color:#B2CD9C; color:white; border:none; border-radius:5px;">
-      Verify Certificate
-           </button>
-          </a>
-        </div>
-      </div>
-    </div>
-    
-    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="IMG_7052.JPG" alt="Certificate 1">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Certificate of Appreciation</strong></h4>
-          <p style="color: #000000;">Marwa Habibi received a Certificate of Appreciation for her dedication and active
-            participation in the A1-level Turkish course, showcasing her passion for language learning and academic
-            excellence.</p>
-        </div>
-      </div>
-    </div>
+  
 
     <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
       <div class="card-inner">
@@ -1067,19 +939,6 @@ nav ul.show {
           <h4><strong style="color: #000000;">Certificate of Achievement</strong></h4>
           <p style="color: #000000;">This exceptional certificate honors Marwa Habibi for her creative and insightful essay
             on expanding educational opportunities for Afghan girls.</p>
-        </div>
-      </div>
-    </div>
-    
-    <div class="card-container landscape" onclick="this.classList.toggle('flipped')">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Screenshot (617).png" alt="Certificate 1">
-        </div>
-        <div class="card-back">
-          <h4><strong style="color: #000000;">Certificate of Appreciation</strong></h4>
-          <p style="color: #000000;">This certificate recognizes outstanding analysis, creativity, and dedication to
-            advancing education for girls in Afghanistan.</p>
         </div>
       </div>
     </div>
