--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ nav ul.show {
 <header class="header">
   <div class="content"><br><br>
     <h1 style="color: #1a1a1a; font-size: 2.5rem; font-family: 'Dancing Script';">Hi, I am Marwa Habibi</h1>
-    <p style="font-size: 1.5rem; font-family: 'Orbitron';">Computer Science <strong>University of the People</strong> | Frontend Developer | Cybersecurity Specialist | Project Manager </p>
+    <p style="font-size: 1.5rem; font-family: 'Orbitron';">Writer, Researcher, Frontend & Mobile Developer, and Advocate for Afghan Girls’ Education</p>
     <a style="font-size: 1rem; font-family: cursive; color: white;" href="https://medium.com/@marwahabibi789/empowering-afghan-girls-my-journey-in-writing-research-leadership-880b10204969" class="btn-primary" style="color: #ffffff;">Learn More About Me</a>
   </div>
 </header>
@@ -606,16 +606,16 @@ nav ul.show {
 <!-- Features Section -->
 <section id="features">
   <div class="feature animate"> 
-    <h3>Frontend Developer</h3>
-    <p>Experienced in building frontend web applications with responsive frontend design and robust functionality. Skilled in HTML, CSS, JavaScript, React, Bootstrap.</p>
+    <h3>Frontend & Mobile Developer</h3>
+    <p>Skilled in building responsive web and mobile applications using HTML, CSS, JavaScript, React, and Flutter. Passionate about creating user-friendly and impactful digital experiences.</p>
   </div>
   <div class="feature animate">
-    <h3>Cybersecurity Specialist</h3>
-    <p>Passionate about protecting digital systems. Experienced in understanding threats, vulnerabilities, and implementing secure practices. Completed courses in Cybersecurity, Detection & Response, and Automating Tasks with Python.</p>
+    <h3>Writer & Researcher</h3>
+    <p>Experienced in writing articles, stories, and research with international recognition. Dedicated to sharing real-life challenges, especially about Afghan girls and education, to inspire change globally.</p>
   </div>
   <div class="feature animate">
-    <h3>Project Manager</h3>
-    <p>Skilled in planning, organizing, and executing projects efficiently. Experienced in leading teams, managing timelines, and ensuring successful project delivery.</p>
+    <h3>Advocate for Afghan Girls’ Education</h3>
+    <p>Actively promoting access to education and equal opportunities for girls in Afghanistan. Engaging in initiatives, workshops, and campaigns to raise awareness and empower the next generation.</p>
   </div>
 </section>
 
