--- a/about.html
+++ b/about.html
@@ -509,7 +509,7 @@
         <section class="profile-section" id="about-bio"><br>
             <img src="download.jpeg" alt="Marwa Habibi" style="margin-top: 50px;" />
             <div class="bio" style="margin-top: 70px;">
-                <p>Marwa Habibi is an 15-year-old Afghan girl born in 2010 in the city of Mazar-e-Sharif, Balkh province, into a middle-class family. 
+                <p>Marwa Habibi is an 18-year-old Afghan girl born in 2007 in the city of Mazar-e-Sharif, Balkh province, into a middle-class family. 
                     <p>Marwa aspires to become Afghanistan’s representative at the United Nations and to establish herself as a renowned writer.</p>
                     Through her continuous efforts and activism, she is determined to make a positive impact on society and the world.</p>
                     <p>From a young age, Marwa developed a deep love for books and was passionate about studying and conducting research. Despite facing financial and family challenges, Marwa’s strong enthusiasm for reading and learning never wavered, and each year, she advanced with greater passion and talent.</p><br>
@@ -525,14 +525,14 @@
                     to pursue learning through online courses and self-directed study.</p>
             </div>
             <div class="resume-item">
-                <h4><i class="fas fa-certificate icon" data-delay="0.4"></i> Online Courses & Certifications</h4>
-                <span>Various International Programs (2024-2025)</span>
-                <p>Completed multiple international online courses covering diverse topics in technology, development, and professional skills. Gained practical knowledge and earned certificates to enhance my expertise and career readiness.</p>
+                <h4><i class="fas fa-certificate icon" data-delay="0.4"></i> Founder & Head of Women Family Empower</h4>
+                <span>Community & Women’s Empowerment Initiative</span>
+                <p>Founded an initiative dedicated to supporting Afghan women and girls by promoting education, leadership, and skill development. Led workshops, awareness campaigns, and mentorship programs to empower families and young women to achieve their goals despite social and cultural challenges.</p>
             </div>
         </section>
 
         <section class="resume" id="resume-experience">
-            <h3><i class="fas fa-briefcase icon" data-delay="0"></i> Experience & Volunteer Work</h3>
+            <h3><i class="fas fa-briefcase icon" data-delay="0"></i> Experience</h3>
 
             <div class="resume-item">
                 <h4><i class="fas fa-handshake icon" data-delay="0.2"></i> Member, Generation of Thinkers</h4>
