--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@ nav ul.show {
 <header class="header">
   <div class="content"><br><br>
     <h1 style="color: #1a1a1a; font-size: 2.5rem; font-family: 'Dancing Script';">Hi, I am Marwa Habibi</h1>
-    <p style="font-size: 1.5rem; font-family: 'Orbitron';">Writer, Researcher, Frontend & Mobile Developer, and Advocate for Afghan Girls’ Education</p>
-    <a style="font-size: 1rem; font-family: cursive; color: white;" href="https://medium.com/@marwahabibi789/empowering-afghan-girls-my-journey-in-writing-research-leadership-880b10204969" class="btn-primary" style="color: #ffffff;">Learn More About Me</a>
+    <p style="font-size: 1.5rem; font-family: 'Orbitron';">Advocate for Afghan Girls’ Education</p><br>
+    <a style="font-size: 0.9rem; font-family: cursive; height: 50; width: 50; color: white;" href="https://medium.com/@marwahabibi789/empowering-afghan-girls-my-journey-in-writing-research-leadership-880b10204969" class="btn-primary" style="color: #ffffff;">Learn More About Me</a>
   </div>
 </header>
 
