--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ nav ul.show {
 <!-- Header -->
 <header class="header">
   <div class="content"><br><br>
-    <h1 style="color: #1a1a1a; font-size: 2.5rem; font-family: 'Dancing Script';">Hi, I am Marwa Habibi</h1>
+    <h1 style="color: #1a1a1a; font-size: 2.5rem; font-family: 'Dancing Script';">Founder of Women Family Empower</h1>
     <p style="font-size: 1.5rem; font-family: 'Orbitron';">Advocate for Afghan Girls’ Education</p><br>
     <a style="font-size: 0.9rem; font-family: cursive; height: 50; width: 50; color: white;" href="https://medium.com/@marwahabibi789/empowering-afghan-girls-my-journey-in-writing-research-leadership-880b10204969" class="btn-primary" style="color: #ffffff;">Learn More About Me</a>
   </div>
@@ -685,7 +685,7 @@ nav ul.show {
     <a style="text-decoration: none;" href="https://www.facebook.com/profile.php?id=100085588758846&mibextid=ZbWKwL" target="_blank" title="Facebook" class="contact-icon">
       <i class="fa-brands fa-facebook"></i>
     </a>
-    <a style="text-decoration: none;" href="https://www.instagram.com/safahabibi111" target="_blank" title="Instagram" class="contact-icon">
+    <a style="text-decoration: none;" href="https://www.instagram.com/mwriter2026/" target="_blank" title="Instagram" class="contact-icon">
       <i class="fa-brands fa-instagram"></i>
     </a>
     <a style="text-decoration: none;" href="https://medium.com/@marwahabibi789" target="_blank" title="Medium" class="contact-icon">
